--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
   - init: |
-      pip3 install Flask Flask-SQLAlchemy
+      pip3 install -r requirements.txt
     command: |
-      export FLASK_APP=app.py && flask run
+      export FLASK_APP=app && flask run --host=0.0.0.0
