--- a/sample_config.json
+++ b/sample_config.json
@@ -12,7 +12,11 @@
             "1_weekly": 4,
             "1_finals": "50%",
             "2_counts": "50%",
-            "2_weekly": 3
+            "2_weekly": 3,
+            "3": "test",
+            "3_counts": "10%",
+            "3_weekly": 5
+            
         },
         {
             "name": "maths_basic",
